fix(MobileNav): z indexing issue on mobile nav

--- a/assets/css/modules/_layout.scss
+++ b/assets/css/modules/_layout.scss
@@ -58,7 +58,7 @@
 @media (max-width: 768px) {
   .left-nav {
     left: -270px;
-    z-index: 2; //just enough to be visible
+    z-index: 11; //just enough to be visible
     transition: all .3s ease-in-out;
     top: 0px;
   }
